kubernetes/postgres/applications/keycloak/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: keycloak-app
  namespace: postgres
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    app.kubernetes.io/instance: postgres
spec:
  podSelector:
    matchLabels:
      postgres-operator.crunchydata.com/cluster: keycloak
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: keycloak
          podSelector:
            matchLabels:
              app: keycloak
      ports:
        - protocol: TCP
          port: 5432
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: keycloak-postgres
  namespace: postgres
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    app.kubernetes.io/instance: postgres
spec:
  podSelector:
    matchLabels:
      postgres-operator.crunchydata.com/cluster: keycloak
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: postgres
          podSelector:
            matchLabels:
              postgres-operator.crunchydata.com/cluster: keycloak
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: postgres
          podSelector:
            matchLabels:
              postgres-operator.crunchydata.com/cluster: keycloak
